<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_news"
            android:title="@string/navigation_drawer_newsfeed" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_grocery"
            android:title="@string/navigation_drawer_events" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_menu_friends"
            android:title="@string/navigation_drawer_friends" />
    </group>

    <item android:title="Disconnect">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:title="@string/navigation_drawer_logout" />
            <item
                android:id="@+id/nav_delete_acc"
                android:title="@string/navigation_drawer_delete" />
        </menu>
    </item>
</menu>
